// Let's test PR and merge

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.7'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java-test-fixtures'
}

group = 'com.flab'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'it.ozimov:embedded-redis:0.7.2'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// FCM
	implementation 'com.google.firebase:firebase-admin:9.2.0'

	// test
	testImplementation('com.google.code.gson:gson:2.10.1')

	// monitoring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// .env에 정보를 application.yaml로 자동 패치해주는 의존성
	implementation 'io.github.cdimascio:dotenv-java:2.2.0'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'




	implementation 'org.springframework.retry:spring-retry'
	implementation 'org.springframework:spring-aspects'
	testFixturesImplementation ('com.github.javafaker:javafaker:1.0.2') { exclude module: 'snakeyaml' }
	testFixturesImplementation group: 'org.yaml', name: 'snakeyaml', version: '2.2'

}

tasks.named('test') {
	useJUnitPlatform()
}

